@@ -1,3 +1,12 @@
+2003-10-20  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/gnome-cal.[ch] (gnome_calendar_add_event_uri): renamed
+	from gnome_calendar_open.
+
+	* gui/calendar-component.c (load_uri_for_source): call
+	gnome_calendar_add_event_uri instead of setting the URI property on
+	the Bonobo control.
+
 2003-10-17  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/migration.c (process_calendar_dir): process subfolders.
